fixed spacing between tutoring additional

--- a/css/style.css
+++ b/css/style.css
@@ -214,6 +214,12 @@ ul, li{
         font-size: 3.5vw;
     }
 
+    .tutoring-additional{
+        ul > li{
+            margin-bottom: 2vw;
+        }
+    }
+
     .cupboard-access a, .tutoring-about a, .tutoring-directory a, .tutoring-drop-in a, .caps-peer-counseling a, .caps-uwill a{
         display: block;
         font-size: 4vw;
